# lotkeeper-agent

./: .dockerignore  .gitattributes  .gitignore  README.md  dev.sh  docker-run.sh  pyproject.toml  run-dev.sh
.github/workflows/: docker-build.yml
deployment/: copy_addon.py  copy_client.py  example.env  promtail-config.yml  wowbox-deploy.yml  wowbox.yml
deployment/addons/OpenAuctionScanner/: OpenAuctionScanner.lua  OpenAuctionScanner.toc  README.md
deployment/config/: wow.json
deployment/docker/: Dockerfile  ci_cd.md  copy_addon.py  copy_client.py  promtail-config.yml  startup.sh  wowbox.yml
docker/: Dockerfile  startup.sh  wotlk.yml  wowbox.yml  xorg.conf
src/lotkeeper_agent/: config.py  dependencies.py  main.py  scheduler.py
src/lotkeeper_agent/agents/: auction_house_agent.py  base_agent.py  wow_agent.py
src/lotkeeper_agent/common/: discord_logger.py  sleep_util.py  xdo.py  xdo_game.py
src/lotkeeper_agent/detectors/: text_detector.py
src/lotkeeper_agent/models/: auction.py  wow_config.py
src/lotkeeper_agent/tasks/: agent_task.py  login_task.py  scan_auctions_task.py  select_window_task.py  target_interact_creature_task.py
src/open_ah_agent/: config.py  dependencies.py  interact.py  main.py  scheduler.py  window.py
src/open_ah_agent/agents/: auction_house_agent.py  base_agent.py  wow_agent.py
src/open_ah_agent/common/: discord_logger.py  xdo.py  xdo_game.py
src/open_ah_agent/detectors/: text_detector.py
src/open_ah_agent/models/: auction.py
src/open_ah_agent/sequences/: interact_sequence.py  login_sequence.py  sequence.py
src/open_ah_agent/tasks/: agent_task.py  interact_target_task.py  login_task.py  scan_auctions_task.py  select_window_task.py  target_interact_creature_task.py  window_select_task.py
src/openah_agent/: config.py  dependencies.py  main.py  scheduler.py
src/openah_agent/agents/: auction_house_agent.py  base_agent.py  wow_agent.py
src/openah_agent/common/: app_info.py  discord_logger.py  logging.py  xdo.py  xdo_game.py
src/openah_agent/detectors/: text_detector.py
src/openah_agent/models/: auction.py  item_metadata.py
(+5 files in other folders)
